src/styles.scss
@use 'fonts';

$bg-color: #F9F7F6;
$primary-color: #2E2E2E;
$accent: #E84400;
$callout-size: 32px;

$spacing: 15px;

// Utilities & Reset
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
a, a:visited {
    color: inherit;
}

img {
    display: block;
    width: 100%;
    height: auto;
}

body {
    color: $primary-color;
    font-family: 'Geogrotesque', sans-serif;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    min-height: 100vh;
    padding: 121px 0;
    background-color: white;
}

.container {
    max-width: 1317px;
    width: 100%;
    margin: 0 auto;
}

.recycling_disposal {
    padding: 48px 61px 10px;
    background: $bg-color;

    &_header {
        text-align: center;
        margin-bottom: 28.5px;
    }

    &_category {
        height: 23px;
        font-size: 15px;
        line-height: 23px;
        font-weight: 600;
        letter-spacing: 4%;
        text-transform: uppercase;
    }

    &_title {
        font-weight: 500;
        font-style: Medium;
        font-size: 29px;
        line-height: 44px;
        letter-spacing: 0%;
        text-align: center;
        height: 68px;
        padding-top: 7px;
    }
}

.recycling_disposal_nav {
    ul {
        display: flex;
        justify-content: space-between;
        list-style: none;
        max-width: 790px;
        margin: 0 auto;

        li {
            a {
                display: inline-block;
                font-size: 15px;
                text-transform: uppercase;
                text-decoration: none;
                transition: opacity 0.2s;
                font-weight: 600;
                line-height: 23px;
                letter-spacing: 4%;

                &:hover {
                    opacity: 0.7;
                }
            }

            // Only to fit the design, should just space-between the items
            &:nth-child(2) a {
                transform: translateX(1px);
            }
            &:nth-child(3) a {
                transform: translateX(6px);
            }
            &:nth-child(4) a {
                transform: translateX(-2px);
            }
            &:nth-child(5) a {
                transform: translateX(6px);
            }
            &:nth-child(6) a {
                transform: translateX(3px);
            }
            &:nth-child(7) a {
                transform: translateX(-7.5px);
            }

            &.is-active a {
                border-bottom: 1px solid $primary-color;
            }
        }
    }
}

.recycling_disposal_content {
    display: flex;
    gap: 78px;
    align-items: flex-start;
    margin-top: 89px;
}

.recycling_disposal_parts {
    flex: 0 0 550px;

    .part {
        padding: 0px 25px 32px 0;
        border-bottom: 0.3px solid $primary-color;
        font-weight: 400;
        font-size: 18px;
        line-height: 27px;
        letter-spacing: 0.38px;
        margin-bottom: 26px;

        &:first-child {
            padding-top: 0;
        }

        &:last-child {
            border-bottom: none;
        }

        strong, em {
            display: block;
            letter-spacing: 0.55px;
        }

        strong {
            font-weight: 600;
            letter-spacing: 0.50px;
        }

        &__title {
            font-weight: 500;
            text-transform: uppercase;
            letter-spacing: 0.08em;
            color: $primary-color;
            margin-bottom: 11px;
            font-size: 20px;
            line-height: 40px;
            letter-spacing: 4%;
        }
    }
}

.recycling_disposal_visual {
    flex: 1;
    min-width: 0;
    display: flex;
    gap: 70px;
}

.visual__bottle {
    position: relative;

    &:first-child {
        flex: 0 0 152px;
        padding-top: 15px;
    }

    &:last-child {
        flex: 0 0 153px;
    }

    .callout {
        position: absolute;
        width: $callout-size;
        height: $callout-size;
        border-radius: 50%;
        background: $primary-color;
        color: #fff;
        font-size: 20px;
        font-weight: 500;
        display: flex;
        align-items: center;
        justify-content: center;
        z-index: 10;
        user-select: none;
    }

    .callout-1 { top: 10%;   left: 5%; }
    .callout-2 { top: 39%;  left: 0%; transform: translateX(-50%); }
    .callout-3 { top: 0%;   right: 0%; transform: translateX(35%); }
}

